src/objects/ffr__ActionViewsPersonalSetting__c.object
<CustomObject>
    <description>Stores details of a personal setting saved against a particular action view template.</description>
    <fields>
        <fullName>ffr__InquiryTemplate__c</fullName>
        <label>Action View Template</label>
        <referenceTo>ffr__InquiryTemplate__c</referenceTo>
        <relationshipName>ActionViewsPersonalSettings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffr__Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Key</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ffr__Settings__c</fullName>
        <label>Settings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Personal Setting</label>
    <nameField>
        <displayFormat>OEPS-{0000}</displayFormat>
        <label>Action Views Personal Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Personal Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>